Refactor Valentine HTML structure and styles

--- a/Valentine.html
+++ b/Valentine.html
@@ -192,7 +192,7 @@ yes.addEventListener('click', ()=>{
         gif.style.display = 'none'; // ensure original gif hidden
         message.style.display = "block";
         message.innerHTML = `
-        Hey [her name],<br><br>
+        Hey Gab,<br><br>
         I just wanted to tell you how special you are to me. Every time I think of you, my heart feels lighter and happier. I’m really glad you’re in my life, and I hope we can make many more amazing memories together. 💖<br><br>
         – From me ❤️
         `;
@@ -204,4 +204,5 @@ yes.addEventListener('click', ()=>{
 });
 </script>
 </body>
+
 </html>
