Update Valentine's message in index.html

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@ yes.addEventListener('click', ()=>{
         gif.style.display = 'none'; // ensure original gif hidden
         message.style.display = "block";
         message.innerHTML = `
-        Hey [her name],<br><br>
-        I just wanted to tell you how special you are to me. Every time I think of you, my heart feels lighter and happier. I’m really glad you’re in my life, and I hope we can make many more amazing memories together. 💖<br><br>
+        Hey Gab,<br><br>
+        Happy Valentine’s Day 💕 I just wanted to take a moment to tell you how much I appreciate you. You always find a way to make my days a little brighter, even when things get stressful. I’m really grateful that I get to talk to you and have you in my life. No matter what happens or where things go, I’m glad it’s you. I hope today reminds you how special you truly are.<br><br>
         – From me ❤️
         `;
         message.style.fontSize = 'clamp(18px,4vw,24px)';
